--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11"]
-        django-version: ["2.2", "3.1", "3.2"]
+        django-version: ["3.2", "4.0", "4.1", "4.2"]
         os: ["ubuntu-latest", "macos-latest", "windows-latest"]
 
     steps:
