--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,8 +8,13 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11"]
-        django-version: ["3.2", "4.0", "4.1", "4.2"]
+        django-version: ["3.2", "4.1", "4.2", "5.0"]
         os: ["ubuntu-latest", "macos-latest", "windows-latest"]
+        exclude:
+          - django-version: "5.0"
+            python-version: "3.8"
+          - django-version: "5.0"
+            python-version: "3.9"
 
     steps:
       - uses: actions/checkout@v3
