--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,14 +6,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
-        django-version: ["3.2", "4.1", "4.2", "5.0"]
-        os: ["ubuntu-latest", "macos-latest", "windows-latest"]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
+        django-version: ["4.2", "5.0", "5.1"]
         exclude:
           - django-version: "5.0"
+            python-version: "3.9"
+          - django-version: "5.1"
             python-version: "3.8"
-          - django-version: "5.0"
+          - django-version: "5.1"
             python-version: "3.9"
 
     steps:
