--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
       - uses: actions/cache@v4
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('setup.py') }}-${{ hashFiles('dev-requirements.txt') }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('pyproject.toml') }}-${{ hashFiles('dev-requirements.txt') }}
       - name: Install dependencies
         run: |
           pip install --upgrade pip
@@ -42,4 +42,6 @@ jobs:
       - name: Run tests
         run: scripts/test.sh
       - name: Build package
-        run: python setup.py clean sdist
+        run: |
+          python -m pip install --upgrade pip build
+          python -m build
