--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -15,12 +15,12 @@ jobs:
           python-version: '3.11'
       - name: Install dependencies
         run: |
-          pip install --upgrade pip wheel
+          pip install --upgrade pip build
           pip install setuptools twine
       - name: Build and publish
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         run: |
-          python setup.py sdist bdist_wheel
+          python -m build
           twine upload dist/*
