--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,19 +10,20 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
-        django-version: ["4.2", "5.0", "5.1"]
+        os: [windows-latest, macos-latest, ubuntu-latest]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
+        django-version: ["4.2", "5.0", "5.1", "5.2", "6.0"]
         exclude:
-          - django-version: "5.0"
-            python-version: "3.9"
-          - django-version: "5.1"
-            python-version: "3.8"
-          - django-version: "5.1"
-            python-version: "3.9"
+          - django-version: "6.0"
+            python-version: "3.10"
+          - django-version: "6.0"
+            python-version: "3.11"
+          - django-version: "4.2"
+            python-version: "3.14"
 
     steps:
       - uses: actions/checkout@v4
